--- a/marklogic-data-hub-central/ui/src/pages/TilesView.scss
+++ b/marklogic-data-hub-central/ui/src/pages/TilesView.scss
@@ -39,6 +39,10 @@ div.mosaic-container div.mosaic-window-body {
     overflow-y: auto;
 }
 
+div.mosaic-container-explore div.mosaic-window-body {
+    overflow-y: hidden;
+}
+
 div.mosaic-container-load div.mosaic-tile,
 div.mosaic-container-model div.mosaic-tile,
 div.mosaic-container-curate div.mosaic-tile,
